--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
