--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
+    "jsrtf": "^0.0.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
@@ -22,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.28.0",
+    "redocx": "^1.1.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "react-router-dom": "^6.26.2"
   }
 }
