--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "docx": "^9.3.0",
     "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "jsrtf": "^0.0.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/html-docx-js": "^0.3.4",
     "react-router-dom": "^6.26.2"
   }
 }
