--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "docx": "^9.3.0",
     "file-saver": "^2.0.5",
     "html-docx-js": "^0.3.1",
@@ -26,6 +27,7 @@
     "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
